--- a/Share Extension/de.lproj/Localizable.strings
+++ b/Share Extension/de.lproj/Localizable.strings
@@ -2,7 +2,7 @@
 "alert.no.internet.title" = "Keine Internetverbindung";
 
 /* Message to tell the user to try again when they have internet connectivity again */
-"alert.no.internet.try.again" = "Bitte überprüfe, ob du über eine Internetverbindung verfügst, und versuche es dann noch einmal.";
+"alert.no.internet.try.again" = "Bitte überprüfe, ob du eine Internetverbindung hast, und versuche es dann noch einmal.";
 
 /* Title for generic Cancel button. Mostly used in popups and as such.
    Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
@@ -53,6 +53,9 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Aktualisieren";
 
+/* Title for generic delete button. */
+"Delete" = "Löschen";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Mehr erfahren";
 
@@ -92,6 +95,9 @@
 
 /* Groups category label */
 "share.destination.groups" = "Gruppen";
+
+/* Share on the home feed label */
+"share.destination.home" = "Home";
 
 /* Destination screen title */
 "share.destination.title" = "HalloApp";
