--- a/Share Extension/es.lproj/Localizable.strings
+++ b/Share Extension/es.lproj/Localizable.strings
@@ -53,6 +53,9 @@
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Actualizar";
 
+/* Title for generic delete button. */
+"Delete" = "Eliminar";
+
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Más información";
 
@@ -92,6 +95,9 @@
 
 /* Groups category label */
 "share.destination.groups" = "Grupos ";
+
+/* Share on the home feed label */
+"share.destination.home" = "Inicio";
 
 /* Destination screen title */
 "share.destination.title" = "HalloApp";
